@@ -1,6 +1,7 @@
 Revision history for ExtUtils-HasCompiler
 
 {{$NEXT}}
+          Don't forget the dot on the loadable object
 
 0.008     2015-07-03 14:13:30+02:00 Europe/Amsterdam
           Handle ancient perls without PERL_UNUSED_VAR
